--- a/about.html
+++ b/about.html
@@ -35,9 +35,6 @@
         </div>
       </nav>
       <div class="mid">
-        <video autoplay muted loop>
-          <source class="embed-responsive" src="assets/video/About.mp4" type="video/mp4">
-        </video>
         <div class="cuy text-center">
           <h2 class="text-light display-4 font-weight-bold">Quickly Meticulous in Making</h2>
           <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repellat
@@ -191,6 +188,24 @@
     <!-- script -->
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script>
+      VANTA.NET({
+        el: ".mid",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        color: 0x00BF85,
+        backgroundColor: 0x000000,
+        scale: 1.00,
+        scaleMobile: 1.00,
+        points: 14.00,
+        maxDistance: 19.00,
+        spacing: 20.00
+      })
+    </script>
     <script>
       $(document).ready(function () {
         $(window).scroll(function () {
