--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
             <a class="nav-link" href="#service">Service</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">Sign up</a>
+            <a class="nav-link" href="#sign">Sign up</a>
           </li>
         </ul>
         <button class="btn btn-success text-dark" type="submit">Sign in</button>
       </div>
     </nav>
     <div class="mid">
-      <video autoplay muted loop>
-        <source class="embed-responsive" src="assets/video/Home.mp4" type="video/mp4">
-      </video>
       <div class="cuy text-center">
         <h2 class="text-light display-4 font-weight-bold">Web Development</h2>
         <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus ad
@@ -283,6 +280,23 @@
   <!-- script -->
   <script src="assets/js/jquery-3.5.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+  <script>
+    VANTA.GLOBE({
+      el: ".mid",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x00BF85a,
+      backgroundColor: 0x000000,
+    })
+  </script>
   <script>
     $(document).ready(function () {
       $(window).scroll(function () {
